--- a/src/test/allure.properties
+++ b/src/test/allure.properties
@@ -1,1 +1,2 @@
-allure.link.issue.pattern="https://github.com/Test-Automation-Crash-Course-24-10-22/team_11/issues{}"
+allure.link.issue.pattern=https://github.com/Test-Automation-Crash-Course-24-10-22/team_11/issues{}
+allure.results.directory=target/allure-results
